<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        app:titleMarginStart="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/redPrimary"
        app:layout_constraintDimensionRatio="16:6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id= "@+id/tv_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/tv_Ola"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id= "@+id/tv_Ola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_ola"
        android:layout_margin="16dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id= "@+id/tv_agencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="4dp"
        app:layout_constraintStart_toEndOf="@id/tv_ag"
        app:layout_constraintTop_toBottomOf="@id/tv_Ola" />

    <TextView
        android:id= "@+id/tv_ag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ag"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/tv_Ola"
        app:layout_constraintTop_toBottomOf="@id/tv_Ola" />

    <TextView
        android:id= "@+id/tv_conta_corrente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginLeft="4dp"
        app:layout_constraintStart_toEndOf="@id/tv_Cc"
        app:layout_constraintTop_toBottomOf="@id/tv_Ola"/>

    <TextView
        android:id= "@+id/tv_Cc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cc"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        app:layout_constraintStart_toEndOf="@id/tv_agencia"
        app:layout_constraintTop_toBottomOf="@id/tv_Ola"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_card_conta"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_agencia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_saldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_monetization_on_black_24dp"
            android:layout_margin="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/tv_saldo_disponível"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_saldo_disponivel"
            android:layout_marginLeft="16dp"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@id/iv_saldo"
            app:layout_constraintLeft_toRightOf="@id/iv_saldo"
            app:layout_constraintBottom_toBottomOf="@id/iv_saldo" />

       <ImageView
           android:id="@+id/iv_up"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_margin="16dp"
           android:src="@drawable/ic_expand_less_black_24dp"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_saldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="R$ 1.200,00"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_saldo_disponível"
            app:layout_constraintStart_toStartOf="@id/iv_saldo" />

        <TextView
            android:id="@+id/tv_saldo_limite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_saldo_limite"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_saldo"
            app:layout_constraintStart_toStartOf="@id/tv_saldo" />

        <TextView
            android:id="@+id/tv_limite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="R$ 2.200,00"
            android:layout_marginLeft="8dp"
            app:layout_constraintTop_toTopOf="@id/tv_saldo_limite"
            app:layout_constraintStart_toEndOf="@id/tv_saldo_limite"
            android:layout_marginStart="8dp"/>

        <View
            android:id="@+id/v_divisor"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/tv_saldo_limite"
            android:layout_margin="16dp"/>

        <TextView
            android:id="@+id/tv_extrato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_ver_extrato"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_divisor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/redSecundary"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_pagar"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/mcv_card_conta"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_pagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_credit_card_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tv_pagar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/tv_pagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_pagar"
                app:layout_constraintTop_toBottomOf="@id/iv_pagar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_trasnferir"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/mcv_card_conta"
        app:layout_constraintStart_toEndOf="@id/mcv_pagar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_transferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_payments_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tv_transferir"/>

            <TextView
                android:id="@+id/tv_transferir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_transferir"
                app:layout_constraintTop_toBottomOf="@id/iv_transferir"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_Recarga"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/mcv_card_conta"
        app:layout_constraintStart_toEndOf="@id/mcv_trasnferir">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_recarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_smartphone_black_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/tv_recarga"/>

            <TextView
                android:id="@+id/tv_recarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_recarga"
                app:layout_constraintTop_toBottomOf="@id/iv_recarga"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


    <ImageView
        android:id="@+id/iv_cartao_final"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:background="@color/redPrimary"
        app:layout_constraintTop_toBottomOf="@id/mcv_pagar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_cartao_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:textColor="@color/white"
        android:text="@string/txt_cartao_final"
        app:layout_constraintTop_toTopOf="@id/iv_cartao_final"
        app:layout_constraintStart_toStartOf="@id/iv_cartao_final"
        app:layout_constraintBottom_toBottomOf="@id/iv_cartao_final" />

    <TextView
        android:id="@+id/tv_num_cartao_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/tv_cartao_final"
        app:layout_constraintTop_toTopOf="@+id/tv_cartao_final" />

    <ImageView
        android:id="@+id/iv_dow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_expand_more_black_24dp"
        app:layout_constraintBottom_toBottomOf="@id/iv_cartao_final"
        app:layout_constraintTop_toTopOf="@id/iv_cartao_final"
        app:layout_constraintEnd_toEndOf="@id/iv_cartao_final"/>




</androidx.constraintlayout.widget.ConstraintLayout>

